--- a/lapalettedugout/menus.scss
+++ b/lapalettedugout/menus.scss
@@ -186,7 +186,7 @@ $font-weight200: 200;
 
 %media-query-choix {
     @media (min-width:768px) {
-        width: 80%;
+        width: 70%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -325,12 +325,12 @@ main {
     padding: 0 8px;
     font-size: $font-size16;
     padding: 24px 15px;
-    padding-bottom: 0;
+    padding-bottom: 15px;
     animation: fadein 1.5s;
     animation: menu-appear ease-in-out 1500ms backwards;
 
     @media (min-width:768px) {
-        width: 80%;
+        width: 70%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -377,7 +377,7 @@ main {
 
     .title {
         font-size: 16px;
-        padding: 24px 0 15px 13px;
+        padding: 7px 0 15px 13px;
     }
 
     @extend %media-query-choix;
