--- a/accueil/style.css
+++ b/accueil/style.css
@@ -4,6 +4,7 @@
 /***Roboto300**/
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 /****Shrikhand400****/
+/**************************************************************/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,12 +12,18 @@
   font-family: "Roboto", sans-serif;
 }
 
-/**************************************************************/
-/**************************************************************/
-/******************************************************************************************/
-/******************************************************************************************/
-/******************************************************************************************/
-/*************************************************************************************/
+footer li, footer ul {
+  padding-bottom: 10px;
+}
+
+.fonctionnement-page i.fa-solid.fa-store, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-mobile-screen-button {
+  padding-right: 25px;
+}
+
+.fonctionnement-page i.fa-solid.fa-store, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-mobile-screen-button {
+  padding-left: 10px;
+}
+
 .center {
   display: flex;
   text-align: center;
@@ -88,7 +95,6 @@
     z-index: 0;
   }
 }
-/******************************************************************************************/
 nav img {
   display: block;
   margin-left: auto;
@@ -121,7 +127,6 @@ nav i.fa-sharp.fa-solid.fa-location-dot {
   padding-right: 13px;
 }
 
-/******************************************************************************************/
 header {
   background: #F6F6F6;
   text-align: center;
@@ -170,7 +175,6 @@ header .button:hover {
   }
 }
 
-/******************************************************************************************/
 .fonctionnement {
   padding: 20px;
 }
@@ -203,7 +207,6 @@ header .button:hover {
   }
 }
 
-/******************************************************************************************/
 .fonctionnement-page {
   background: #F7F7F7;
   padding: 20px;
@@ -239,7 +242,6 @@ header .button:hover {
   margin-bottom: 60px;
 }
 
-/******************************************************************************************/
 main {
   background: #F6F6F6;
   padding-bottom: 66px;
@@ -287,6 +289,9 @@ main .card {
     margin: 0;
   }
 }
+main .card:hover {
+  cursor: pointer;
+}
 main .card .tag-nouveau {
   position: absolute;
   top: 10px;
@@ -299,11 +304,6 @@ main .card .tag-nouveau {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
-/******************************************************************************************/
-.card :hover {
-  cursor: pointer;
-}
-
 .h4-icon {
   display: flex;
   flex-direction: row;
@@ -311,17 +311,14 @@ main .card .tag-nouveau {
   justify-content: space-between;
   align-items: flex-end;
 }
-
-i.fa-regular.fa-heart {
+.h4-icon i.fa-regular.fa-heart {
   padding-right: 20px;
 }
-
-i.fa-regular.fa-heart.fa-stack-1x.fa-inverse {
+.h4-icon i.fa-regular.fa-heart.fa-stack-1x.fa-inverse {
   text-align: right;
   color: black;
 }
-
-i.fa-solid.fa-heart.fa-stack-1x {
+.h4-icon i.fa-solid.fa-heart.fa-stack-1x {
   text-align: inherit;
   padding-left: 4px;
   background-clip: text;
@@ -329,12 +326,11 @@ i.fa-solid.fa-heart.fa-stack-1x {
   color: transparent;
   transition: opacity 3s ease-in-out;
 }
-i.fa-solid.fa-heart.fa-stack-1x:hover {
+.h4-icon i.fa-solid.fa-heart.fa-stack-1x:hover {
   background-image: linear-gradient(#FF79DA, #9356DC);
   transform: scale(1);
 }
 
-/******************************************************************************************/
 .card img {
   width: 100%;
   height: 160px;
@@ -363,20 +359,6 @@ i.fa-solid.fa-heart.fa-stack-1x:hover {
   padding: 0 0 15px 13px;
 }
 
-/******************************************************************************************/
-footer li, footer ul {
-  padding-bottom: 10px;
-}
-
-.fonctionnement-page i.fa-solid.fa-mobile-screen-button, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-store {
-  padding-right: 25px;
-}
-
-.fonctionnement-page i.fa-solid.fa-mobile-screen-button, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-store {
-  padding-left: 10px;
-}
-
-/******************************************************************************************/
 footer {
   background: #353535;
   color: #FFFFFF;
