--- a/alafrançaise/style.scss
+++ b/alafrançaise/style.scss
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 /***Roboto500**/
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-
 /****Shrikhand400****/
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -14,7 +14,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/***************************************************************************************/
+//Les variables
 $primary-color: #F6F6F6;
 $secondary-color: #FFFFFF;
 $footer-color: #353535;
@@ -24,7 +24,7 @@ $font-size16: 16px;
 $font-size18: 18px;
 $font-weight200: 200;
 
-/***************************************************************************************/
+//Mixin footer
 @mixin footer {
     background: $footer-color;
     color: $secondary-color;
@@ -77,7 +77,7 @@ $font-weight200: 200;
 }
 
 
-/***************************************************************************************/
+//Mixin bouton
 @mixin btn-menu {
     background: linear-gradient(193.33deg, #FF79DA -11.44%, #9356DC 123.93%);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -94,7 +94,7 @@ $font-weight200: 200;
     }
 }
 
-/***************************************************************************************/
+//Mixin titre
 @mixin main-titre {
     .h3-et-coeur {
         display: flex;
@@ -112,7 +112,7 @@ $font-weight200: 200;
     }
 }
 
-/***************************************************************************************/
+//Mixin choix
 @mixin choix {
     background: $secondary-color;
     width: 100%;
@@ -174,8 +174,7 @@ $font-weight200: 200;
     }
 }
 
-/***************************************************************************************/
-
+//Extend
 %title-choix {
     .title {
         @media (min-width:768px) {
@@ -191,11 +190,18 @@ $font-weight200: 200;
         margin-right: auto;
     }
 }
+
 %padding-bottom {
     padding-bottom: 10px;
 }
 
-/***************************************************************************************/
+%trois-petit-point {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+//Barre de navigation
 nav {
     .fleche {
         display: flex;
@@ -228,7 +234,8 @@ nav {
 
     .photo-logo {
         width: 162px;
-        @media (min-width:768px){
+
+        @media (min-width:768px) {
             width: 200px;
         }
     }
@@ -244,7 +251,7 @@ nav {
     }
 }
 
-/***************************************************************************************/
+//Main
 main {
     background: $primary-color;
     border-radius: 40px 40px 0px 0px;
@@ -321,6 +328,7 @@ main {
     }
 }
 
+//Partie Entrée
 .entrées {
     padding: 0 8px;
     font-size: $font-size16;
@@ -342,6 +350,7 @@ main {
     }
 }
 
+//Animation apparition progressinve des menus
 @keyframes menu-appear {
     0% {
         -webkit-transform: translateY(50px);
@@ -360,17 +369,12 @@ main {
     }
 }
 
-%trois-petit-point {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
+//Les choix de toutes les parties
 .choix {
     @include choix;
 }
 
-
+//Partie plats
 .plats {
     padding: 0 15px;
     animation: menu-appear ease-in-out 1500ms 1s backwards;
@@ -387,6 +391,7 @@ main {
 
 }
 
+//Partie desserts
 .desserts {
     padding: 0 15px;
     animation: menu-appear ease-in-out 1500ms 2s backwards;
@@ -401,17 +406,20 @@ main {
     @include main-titre;
 
 }
+
+//Bouton commander
 .commander {
     display: flex;
     justify-content: center;
     padding: 20px;
 
-.boutton-commander {
-    @include btn-menu;
+    .boutton-commander {
+        @include btn-menu;
 
+    }
 }
- }
 
+//Footer
 footer {
     @include footer;
 }
