--- a/accueil/style.css
+++ b/accueil/style.css
@@ -17,11 +17,11 @@ footer li, footer ul {
 }
 
 .fonctionnement-page i.fa-solid.fa-store, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-mobile-screen-button {
-  padding-right: 25px;
+  margin-right: 25px;
 }
 
 .fonctionnement-page i.fa-solid.fa-store, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-mobile-screen-button {
-  padding-left: 10px;
+  margin-left: 10px;
 }
 
 .center {
@@ -216,12 +216,16 @@ header .button:hover {
   border-radius: 20px;
   width: 100%;
   position: relative;
+  cursor: pointer;
 }
 @media (min-width: 768px) {
   .fonctionnement-page {
     width: 100%;
     padding: 26px;
   }
+}
+.fonctionnement-page:hover {
+  background: #F7F7F7;
 }
 .fonctionnement-page .circle-number {
   position: absolute;
@@ -237,6 +241,15 @@ header .button:hover {
   color: white;
   font-family: "Roboto", sans-serif;
   animation: none;
+}
+.fonctionnement-page i.fa-solid.fa-mobile-screen-button:hover {
+  color: #9356DC;
+}
+.fonctionnement-page i.fa-solid.fa-list-ul:hover {
+  color: #9356DC;
+}
+.fonctionnement-page i.fa-solid.fa-store:hover {
+  color: #9356DC;
 }
 .fonctionnement-page.btn3 {
   margin-bottom: 60px;
